// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Forum reducer default saga should return 1 yield with 2 sagas. 2 yield should be in state Done 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "ALL": Array [
      GeneratorFunctionPrototype {
        "_invoke": [Function],
      },
    ],
  },
}
`;

exports[`Forum reducer default saga should return 1 yield with 2 sagas. 2 yield should be in state Done 2`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`Forum reducer getTopicArrayForumIdNonBlockSaga should return 2 expected yields. 3 yield should be in state Done 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "CALL": Object {
      "args": Array [
        Array [
          1,
          2,
          3,
        ],
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`Forum reducer getTopicArrayForumIdNonBlockSaga should return 2 expected yields. 3 yield should be in state Done 2`] = `"getTopicArrayByForumIdApi"`;

exports[`Forum reducer getTopicArrayForumIdNonBlockSaga should return 2 expected yields. 3 yield should be in state Done 3`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "payload": Object {
          "topicArray": Array [
            Object {
              "forumId": 1,
              "id": 1,
              "title": "First",
            },
            Object {
              "forumId": 2,
              "id": 2,
              "title": "Second",
            },
            Object {
              "forumId": 2,
              "id": 3,
              "title": "Third",
            },
            Object {
              "forumId": 3,
              "id": 4,
              "title": "Fourth",
            },
          ],
        },
        "type": "GET_TOPIC_ARRAY_BY_FORUM_ID_SUCCESS",
      },
      "channel": null,
    },
  },
}
`;

exports[`Forum reducer getTopicArrayForumIdNonBlockSaga should return 2 expected yields. 3 yield should be in state Done 4`] = `
Object {
  "done": true,
  "value": undefined,
}
`;

exports[`Forum reducer getTopicArrayForumIdSaga should be in loop and return expected values 1`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "TAKE": Object {
      "pattern": "GET_TOPIC_ARRAY_BY_FORUM_ID",
    },
  },
}
`;

exports[`Forum reducer getTopicArrayForumIdSaga should be in loop and return expected values 2`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "FORK": Object {
      "args": Array [
        1,
      ],
      "context": null,
      "fn": [Function],
    },
  },
}
`;

exports[`Forum reducer getTopicArrayForumIdSaga should be in loop and return expected values 3`] = `"getTopicArrayForumIdNonBlockSaga"`;

exports[`Forum reducer getTopicArrayForumIdSaga should be in loop and return expected values 4`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "PUT": Object {
      "action": Object {
        "payload": Object {
          "parentForumId": 1,
        },
        "type": "GET_FORUM_ARRAY_BY_PARENT_FORUM_ID",
      },
      "channel": null,
    },
  },
}
`;

exports[`Forum reducer getTopicArrayForumIdSaga should be in loop and return expected values 5`] = `
Object {
  "done": false,
  "value": Object {
    "@@redux-saga/IO": true,
    "TAKE": Object {
      "pattern": "GET_TOPIC_ARRAY_BY_FORUM_ID",
    },
  },
}
`;
